[gd_scene load_steps=12 format=3 uid="uid://cpwsb4mpmuye6"]

[ext_resource type="Script" path="res://scripts/OneDimensionFormula1.gd" id="1_cis47"]
[ext_resource type="Script" path="res://scripts/detector_vf.gd" id="1_sxtuh"]
[ext_resource type="Texture2D" uid="uid://ihud4voe3tcr" path="res://asprite/formula1.png" id="2_xe05k"]
[ext_resource type="Script" path="res://scripts/detector_vi.gd" id="3_it35i"]
[ext_resource type="Script" path="res://scripts/detector_t.gd" id="3_ybxt5"]
[ext_resource type="Script" path="res://scripts/detector_a.gd" id="3_yjeb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t80dg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jd3sd"]
size = Vector2(54, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eictw"]
size = Vector2(47, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkgk7"]
size = Vector2(62, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdbhg"]
size = Vector2(69, 67)

[node name="OneDimensionFormula1" type="Node2D"]
script = ExtResource("1_cis47")

[node name="collision" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="collision"]
scale = Vector2(19.1272, 4.56608)
shape = SubResource("RectangleShape2D_t80dg")

[node name="Formula1" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.60153, 0.60153)
texture = ExtResource("2_xe05k")

[node name="detector_time" type="Area2D" parent="."]
script = ExtResource("3_ybxt5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector_time"]
position = Vector2(149, -1.5)
shape = SubResource("RectangleShape2D_jd3sd")

[node name="detector_acce" type="Area2D" parent="."]
script = ExtResource("3_yjeb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector_acce"]
position = Vector2(95.5, 1.5)
shape = SubResource("RectangleShape2D_eictw")

[node name="detector_vi" type="Area2D" parent="."]
script = ExtResource("3_it35i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector_vi"]
position = Vector2(-7, 2)
shape = SubResource("RectangleShape2D_xkgk7")

[node name="detector_vf" type="Area2D" parent="."]
script = ExtResource("1_sxtuh")

[node name="area1" type="CollisionShape2D" parent="detector_vf"]
position = Vector2(-140.5, 1.5)
shape = SubResource("RectangleShape2D_fdbhg")

[node name="Button" type="Button" parent="."]
offset_left = -50.0
offset_top = -76.0
offset_right = 50.0
offset_bottom = -45.0
text = "Synthesize!!"

[connection signal="input_event" from="collision" to="." method="_on_collision_input_event"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
